--- a/index.html
+++ b/index.html
@@ -7,20 +7,23 @@
 </head>
 <body>
 
-<div class="form__content">
-    <div class="form">
-        <p>Title</p>
-        <input type="text" placeholder="name" id="name">
-        <p>Description</p>
-        <textarea cols="30" rows="10" placeholder="description" id="description"></textarea>
-        <p>Price</p>
-        <input type="number" placeholder="price" id="price">
-        <p>Stock Price</p>
-        <input type="number" placeholder="stock price" id="stock_price">
-        <p>Category</p>
-        <input type="number" placeholder="category ID" id="category_id">
-        <button id="submit">Submit</button>
+<div class="form__block">
+    <div class="form__content">
+        <div class="form">
+            <p>Title</p>
+            <input type="text"  placeholder="name" id="name">
+            <p>Description</p>
+            <textarea cols="30" rows="10" placeholder="description" id="description"></textarea>
+            <p>Price</p>
+            <input type="number" placeholder="price" id="price">
+            <p>Stock Price</p>
+            <input type="number" placeholder="stock price" id="stock_price">
+            <p>Category</p>
+            <input type="number" placeholder="category ID" id="category_id">
+            <button id="submit">Submit</button>
+        </div>
     </div>
+    <div class="popup"></div>
 </div>
 
 <div class="products"></div>
